--- a/solutions.css
+++ b/solutions.css
@@ -15,3 +15,14 @@
 .ex-2-square:active{
     width: 100%;
 }
+
+/* Esercizio 3 */
+.ex-3-square{
+    transition: all 1s ease;
+}
+
+.ex-3-square:hover{
+    border-radius: 100%;
+}
+
+/* Esercizio 4 */
