--- a/solutions.css
+++ b/solutions.css
@@ -26,3 +26,14 @@
 }
 
 /* Esercizio 4 */
+.ex-4-square{
+    transition: all 1s ease;
+    display: inline-block;
+}
+
+.ex-4-square:hover{
+    opacity: 0;
+}
+
+/* Esercizio 5 */
+
