--- a/solutions.css
+++ b/solutions.css
@@ -47,3 +47,10 @@
 .ex-5-square:active{
     transform: scale(0.5);
 }
+
+/* Esercizio 6 */
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
+
+/* Esercizio 7 */
