--- a/solutions.css
+++ b/solutions.css
@@ -112,3 +112,34 @@
         transform: rotate(0);
     }
 }
+
+/* Esercizio 12 */
+.ex-12-button:hover .ex-12-top-white {
+    animation: half-spin-top 2s linear;
+}
+@keyframes half-spin-top {
+    0% {
+        left: 10%;
+    }
+    50% {
+        left: 67%;
+    }
+    100% {
+        left: 10%;
+    }
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: half-spin-bottom 2s linear;
+}
+@keyframes half-spin-bottom {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: 67%;
+    }
+    100% {
+        right: 20%;
+    }
+}
