--- a/solutions.css
+++ b/solutions.css
@@ -69,7 +69,7 @@
 
 .ex-8-img:hover{
     border-radius: 15px;
-    filter: grayscale(0.6);
+    filter: grayscale(0.6) sepia(0.6);
 }
 
 /* Esercizio 9 */
@@ -79,7 +79,7 @@
 
 .ex-9-img:hover{
     border-radius: 15px;
-    filter: grayscale(0.6);
+    filter: grayscale(0.6) sepia(0.6);
     transform: scale(1.5);
 }
 
@@ -174,6 +174,7 @@
         top: -10px;
     }
 }
+
 .ex-13-button:hover .ex-13-bottom-white {
     animation: spin-bottom 2s linear;
 }
